@@ -1,9 +1,12 @@
+var link;
+<% if @action_link&.position %>
+link = ActiveScaffold.find_action_link('<%= element_form_id(:action => action_name) %>');
+<% end %>
 <% if successful? %>
   <% if @record %>
     <%= render :partial => 'update_messages' %>
     <% row = escape_javascript(render(:partial => 'list_record', :locals => {:record => @record})) -%>
     <% if @action_link&.position %>
-var link = ActiveScaffold.find_action_link('<%= element_form_id(:action => action_name) %>');
 if (link) link.close('<%= row %>');
     <% else %>
       ActiveScaffold.update_row('<%= element_row_id(:action => :list, :id => @record.id) %>', '<%= row %>');
@@ -12,13 +15,21 @@ if (link) link.close('<%= row %>');
     <%= render :partial => 'update_calculations', :formats => [:js] %>
   <% else %>
     <% if @action_link&.position %>
-var link = ActiveScaffold.find_action_link('<%= element_form_id(:action => action_name) %>');
 if (link) link.close();
     <% end %>
     <%= render 'refresh_list', no_history: true %>
   <% end %>
 <% else %>
   <% flash[:error] = active_scaffold_error_messages_for(@record, :object_name => "#{@record.class.model_name.human.downcase}#{@record.new_record? ? '' : ": #{@record.to_label}"}", :header_message => '', :message => "#{@record.class.model_name.human.downcase}#{@record.new_record? ? '' : ": #{@record.to_label}"}", :container_tag => nil, :list_type => :br) if @record&.errors.present? %>
-  ActiveScaffold.replace_html('<%= active_scaffold_messages_id %>','<%= escape_javascript(render(:partial => 'messages')) %>');
+  <% messages = escape_javascript(render(:partial => 'messages')) %>
+var action_link;
+  <% if @action_link&.position %>
+if (link) {
+  link.update_flash_messages('<%= messages %>');
+  ActiveScaffold.enable_form(link.adapter.find('form'));
+}
+  <% else %>
+  ActiveScaffold.replace_html('<%= active_scaffold_messages_id %>', '<%= messages %>');
   ActiveScaffold.scroll_to('<%= active_scaffold_messages_id %>', true);
+  <% end %>
 <% end %>
